# cpp2025

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cmake-multi-platform.yml
test/: CMakeLists.txt  unit-simple.cpp
